[package]
name = "actix-sqlx-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
sqlx = { version = "0.6.2", features = [
  "runtime-async-std-native-tls",
  "postgres",
] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.91"
